--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p> Jayson Taylor 2014</p>
+		<p> 2014 Git. Training, All rights reserverd.</p>
 	</footer>
 </body>
 </html>
