--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	
 -->
 <head>
-	<title> Updating Title for Stash Branch Example
+	<title> Updating Title for simple Tagging Example
 	</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
